--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "url": "https://github.com/matthewcodes/ping/issues"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.12.3",
+    "express-session": "^1.10.4",
     "mongoose": "^3.8.25",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "socket.io": "^1.3.5"
   }
 }
