--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "mongoose": "^3.8.25",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^1.3.5"
+    "wolfram": "^0.3.1"
   }
 }
