--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.3.4",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
+    "konfig": "^0.2.1",
     "mongoose": "^3.8.25",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
